--- a/product/templates/product/checkout.html
+++ b/product/templates/product/checkout.html
@@ -20,7 +20,7 @@
 				</div>
 				{% endfor %}
 				<h5>Items:   {{order.get_cart_items}}</h5>
-				<h5>Total:   ${{order.get_cart_total|floatformat:2}}</h5>
+				<h5>Total:   Tk. {{order.get_cart_total|floatformat:2}}</h5>
 			</div>
 		</div>
 		
