static files changes

--- a/templates/bottom_content.html
+++ b/templates/bottom_content.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Authentic Shotorongi product</a></li>
                 <li><a href="#">Authentic Ceramic Sets</a></li>
                 <li><a href="#">Authentic Flower Sets</a></li>
-                <li><a href="#">Authentic Mathir Sets</a></li>
+                <li><a href="#">Authentic Matir Sets</a></li>
                 <li><a href="#">Men's Collections</a></li>
               </ul>
               {% comment %} <a href="#" class="filled-button">Read More</a> {% endcomment %}
