--- a/product/templates/product/checkout.html
+++ b/product/templates/product/checkout.html
@@ -77,6 +77,7 @@
 
 
 	    document.getElementById('form-button').addEventListener('click', function(e){
+			e.preventDefault()
 	    	submitFormData()
 	    })
 
@@ -113,7 +114,6 @@
 	    	})
 	    	.then((response) => response.json())
 	    	.then((data) => {
-				console.log(data)
 				alert('Order completed');  
 				cart = {}
 				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
