--- a/product/templates/product/index.html
+++ b/product/templates/product/index.html
@@ -17,7 +17,7 @@
         {% for product in products %}
             <div class="col-lg-6 col-xl-4">
                 <div class="product-item">
-                    <a href="{% url 'single_product' product.id %}"><img src="{{product.imageURL}}" alt="no image"></a>
+                    <a href="{% url 'single_product' product.id %}"><img style="width: 100%; height: 15rem; object-fit: cover;" src="{{product.imageURL}}" alt="no image"></a>
                     <div class="down-content">
                         <a href="{% url 'single_product' product.id %}"><h4>{{product.name}}</h4></a>
                         <h6>TK. {{product.price}}</h6>
